crates/keron-lang/tests/corpus/errors/parse/val_named_symlink_type.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `Symlink` is a reserved keyword
  --> 1:5
  |
1 | val Symlink = 1
  |     ^
